[BUGFIX] fix tags overflow & all habits styles & all habits fetching logic

--- a/src/app/component/shared/components/tag-filter/tag-filter.component.scss
+++ b/src/app/component/shared/components/tag-filter/tag-filter.component.scss
@@ -1,7 +1,6 @@
 .wrapper {
   display: grid;
   grid-template-rows: repeat(2, auto);
-  padding-bottom: 10px;
   row-gap: 15px;
 
   span {
@@ -20,9 +19,12 @@
   margin: 0;
   overflow: auto;
   white-space: nowrap;
+  min-height: 42px;
 
   a {
     display: inline-block;
+    font-size: 14px;
+    line-height: 16px;
   }
 }
 
